# src/docs/swagger.json
@@ -22,6 +22,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Common"
+                ],
+                "summary": "使用者登錄",
                 "parameters": [
                     {
                         "description": "必填",
@@ -35,9 +39,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "1-ok 0-fail",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.BaseResponse"
                         }
                     }
                 }
@@ -52,6 +56,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "修改使用者密碼",
                 "parameters": [
                     {
                         "description": "必填",
@@ -65,9 +73,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.BaseResponse"
                         }
                     }
                 }
@@ -82,11 +90,15 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "查詢使用者資訊",
                 "responses": {
                     "200": {
-                        "description": "hello",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.GetResponse"
                         }
                     }
                 }
@@ -101,6 +113,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "使用者註冊",
                 "parameters": [
                     {
                         "description": "必填",
@@ -114,9 +130,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.BaseResponse"
                         }
                     }
                 }
@@ -124,13 +140,51 @@
         }
     },
     "definitions": {
+        "handler.BaseResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "data": {
+                    "type": "object",
+                    "$ref": "#/definitions/handler.Data"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "ok"
+                }
+            }
+        },
+        "handler.Data": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string",
+                    "example": "abcd.abcd.abcd"
+                }
+            }
+        },
+        "handler.GetResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "data": {
+                    "type": "object",
+                    "$ref": "#/definitions/handler.UserInfoResponse"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "ok"
+                }
+            }
+        },
         "handler.UserChangePwdRequest": {
             "type": "object",
-            "required": [
-                "account",
-                "newPassword",
-                "oldPassword"
-            ],
             "properties": {
                 "account": {
                     "type": "string"
@@ -143,12 +197,22 @@
                 }
             }
         },
+        "handler.UserInfoResponse": {
+            "type": "object",
+            "properties": {
+                "birthday": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.UserLoginRequest": {
             "type": "object",
-            "required": [
-                "account",
-                "password"
-            ],
             "properties": {
                 "account": {
                     "type": "string"
@@ -160,13 +224,6 @@
         },
         "handler.UserRegisterRequest": {
             "type": "object",
-            "required": [
-                "account",
-                "birthday",
-                "gender",
-                "name",
-                "password"
-            ],
             "properties": {
                 "account": {
                     "type": "string"
